Cutting down long lines

--- a/Internet_Analysis.ipynb
+++ b/Internet_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Internet Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPuBUXAbguRdi0X8LbTnBIR",
+      "authorship_tag": "ABX9TyNpFFE8RwPmzFDN6B2EC9kQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,12 +36,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "e0f0bf42-9cad-4ee3-e4e3-afb3d84f1be9"
+        "outputId": "78b5e9c8-d851-44dd-f51d-9c03c4aac043"
       },
       "source": [
         "\"\"\"Internet Analysis\"\"\""
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -56,7 +56,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 1
         }
       ]
     },
@@ -76,39 +76,39 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a6255924-2e3b-43b8-db40-c52bee4d7355"
+        "outputId": "68fb841a-7589-42fd-cab6-87fb5d5de80b"
       },
       "source": [
         "!pip install pandas\n",
         "!pip install matplotlib\n",
         "!pip install IPython"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: pandas in /usr/local/lib/python3.7/dist-packages (1.1.5)\n",
             "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas) (2018.9)\n",
-            "Requirement already satisfied: numpy>=1.15.4 in /usr/local/lib/python3.7/dist-packages (from pandas) (1.19.5)\n",
             "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas) (2.8.1)\n",
+            "Requirement already satisfied: numpy>=1.15.4 in /usr/local/lib/python3.7/dist-packages (from pandas) (1.19.5)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (3.2.2)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.4.7)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.3.1)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (0.10.0)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.8.1)\n",
             "Requirement already satisfied: numpy>=1.11 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.19.5)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.8.1)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.3.1)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.4.7)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (0.10.0)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from cycler>=0.10->matplotlib) (1.15.0)\n",
             "Requirement already satisfied: IPython in /usr/local/lib/python3.7/dist-packages (5.5.0)\n",
-            "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.7/dist-packages (from IPython) (5.0.5)\n",
-            "Requirement already satisfied: pygments in /usr/local/lib/python3.7/dist-packages (from IPython) (2.6.1)\n",
+            "Requirement already satisfied: simplegeneric>0.8 in /usr/local/lib/python3.7/dist-packages (from IPython) (0.8.1)\n",
             "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.7/dist-packages (from IPython) (57.2.0)\n",
+            "Requirement already satisfied: pygments in /usr/local/lib/python3.7/dist-packages (from IPython) (2.6.1)\n",
             "Requirement already satisfied: decorator in /usr/local/lib/python3.7/dist-packages (from IPython) (4.4.2)\n",
             "Requirement already satisfied: pexpect in /usr/local/lib/python3.7/dist-packages (from IPython) (4.8.0)\n",
-            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.7/dist-packages (from IPython) (0.7.5)\n",
+            "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.7/dist-packages (from IPython) (5.0.5)\n",
             "Requirement already satisfied: prompt-toolkit<2.0.0,>=1.0.4 in /usr/local/lib/python3.7/dist-packages (from IPython) (1.0.18)\n",
-            "Requirement already satisfied: simplegeneric>0.8 in /usr/local/lib/python3.7/dist-packages (from IPython) (0.8.1)\n",
+            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.7/dist-packages (from IPython) (0.7.5)\n",
             "Requirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->IPython) (1.15.0)\n",
             "Requirement already satisfied: wcwidth in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->IPython) (0.2.5)\n",
             "Requirement already satisfied: ipython-genutils in /usr/local/lib/python3.7/dist-packages (from traitlets>=4.2->IPython) (0.2.0)\n",
@@ -128,7 +128,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -139,7 +139,7 @@
       "source": [
         "import IPython.display as d"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -150,14 +150,14 @@
           "height": 417
         },
         "id": "kA30xmOUNK77",
-        "outputId": "b920b249-8d80-4859-9513-b35720bc29c4"
+        "outputId": "59d789cb-9ccc-47eb-9a36-95ef9e807689"
       },
       "source": [
         "datadf = pd.read_csv(\"data.csv\")\n",
         "datadf.rename(columns={\"Unnamed: 0\":\"Time\"},inplace=True)\n",
         "d.display(datadf)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -396,13 +396,13 @@
           "height": 447
         },
         "id": "-FOqwqHGWoEZ",
-        "outputId": "262f1422-7a38-42e1-8fa9-7490f7fa95ca"
+        "outputId": "0b4d0cea-3cd7-4ca0-dfed-a3269e5d51b2"
       },
       "source": [
         "outagedf=datadf.set_index(\"Time\",inplace=False)\n",
         "d.display(outagedf)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -597,8 +597,8 @@
         "day_outages={}\n",
         "hour_outages={}\n",
         "days=[\"Sun\",\"Mon\",\"Tue\",\"Wed\",\"Thu\",\"Fri\",\"Sat\"]\n",
-        "hours=[i for i in list(range(24))]\n",
-        "columns=[x for x in list(outagedf)]\n",
+        "hours=[i for i in range(24)]\n",
+        "columns=[x for x in outagedf]\n",
         "columns.remove(\"Server\")\n",
         "servers={}\n",
         "\n",
@@ -614,12 +614,12 @@
         "        servers[outagedf.loc[i][\"Server\"]]=servers.get(outagedf.loc[i][\"Server\"],0)+1\n",
         "    for x in columns:\n",
         "        if not np.isnan(outagedf.loc[i][x]):\n",
-        "          F=1\n",
+        "            F=1\n",
         "    if F==0:\n",
         "        day_outages[i[:3]]+=1\n",
         "        hour_outages[str(int(i[11:13]))+\":00\"]+=1"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -630,14 +630,14 @@
           "height": 805
         },
         "id": "XLz8X0OLadTG",
-        "outputId": "646f3812-27ac-4e6b-d433-15d70bc681a4"
+        "outputId": "7765ab78-d316-4e4e-8fcf-a0f6baeefb98"
       },
       "source": [
         "hour_outagedf=pd.DataFrame({\"Count\":hour_outages}).sort_values([\"Count\"],ascending=0)\n",
         "print(\"Number of outages in each hour:\")\n",
         "d.display(hour_outagedf)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -814,7 +814,7 @@
           "height": 346
         },
         "id": "LB_7lVN3arOs",
-        "outputId": "b8ba4b28-9755-4e64-86e8-70f6811051dd"
+        "outputId": "1c21d9fe-85a0-42ad-a6c3-42abf1829ef1"
       },
       "source": [
         "keys=hour_outages.keys()\n",
@@ -827,7 +827,7 @@
         "plt.title(\"Network Outages\",pad='10',fontsize=20)\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -861,14 +861,14 @@
           "height": 282
         },
         "id": "z8Il_zKrbHWN",
-        "outputId": "16eeee0e-abe7-4069-cff4-170a0ca3f8c5"
+        "outputId": "a44e0966-ce5e-4e60-a1b9-22b1e7821a66"
       },
       "source": [
         "day_outagedf=pd.DataFrame({\"Count of Days\":day_outages}).sort_values([\"Count of Days\"],ascending=0)\n",
         "print(\"Number of outages in each week day:\")\n",
         "d.display(day_outagedf)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -960,7 +960,7 @@
           "height": 364
         },
         "id": "-iN-0_JAbPgs",
-        "outputId": "e982eb0f-b8ff-45c9-a777-18d891b1e298"
+        "outputId": "d8f83f3f-4267-45e1-be08-f58e99a2e003"
       },
       "source": [
         "keys=day_outages.keys()\n",
@@ -973,7 +973,7 @@
         "plt.title(\"Network Outages\",pad='10',fontsize=20)\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1007,7 +1007,7 @@
           "height": 743
         },
         "id": "99QuTW4AbsMw",
-        "outputId": "5635376e-1591-4f57-92e6-ffb5138f0f01"
+        "outputId": "fa754bbe-4075-4beb-d817-19698567b4ba"
       },
       "source": [
         "connections=pd.DataFrame({\"Connections\":servers})\n",
@@ -1015,7 +1015,7 @@
         "print(\"Connections each server made:\")\n",
         "d.display(connections)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1200,7 +1200,7 @@
           "height": 417
         },
         "id": "rgldax80dig4",
-        "outputId": "b9cf1cbf-ca62-434f-d461-f7c6cbdec1a4"
+        "outputId": "55697817-5faf-4d16-ad9c-efd9b366d436"
       },
       "source": [
         "df=datadf.copy()\n",
@@ -1208,7 +1208,7 @@
         "df.insert (1,\"Hour\",[row[11:13]+\":00\" for row in df[\"Time\"]])\n",
         "d.display(df)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1426,7 +1426,7 @@
         "  \"Upload\":\"mean\",\n",
         " \"Packet Loss\":\"mean\"}).round(2)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1437,12 +1437,12 @@
           "height": 295
         },
         "id": "6o6w89f9ea1e",
-        "outputId": "1ae62a0a-a26d-4f93-e689-ca6c2617632a"
+        "outputId": "0814cdd9-2790-46e7-cf13-a56c0ff78a0c"
       },
       "source": [
         "d.display(daydf)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1568,7 +1568,7 @@
       "source": [
         "daydf_analyse=pd.DataFrame({\"Minimum on\":daydf.idxmin(),\"Maximum on\":daydf.idxmax()})"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1579,12 +1579,12 @@
           "height": 203
         },
         "id": "U52SDFSxepx1",
-        "outputId": "f44bc23e-9a07-465d-9094-54df2e3e9654"
+        "outputId": "cd316184-42f4-4689-c76e-3658ef3fad1d"
       },
       "source": [
         "d.display(daydf_analyse)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1710,7 +1710,7 @@
         "  \"Upload\":\"mean\",\n",
         " \"Packet Loss\":\"mean\"}).round(2)"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1721,12 +1721,12 @@
           "height": 819
         },
         "id": "oDltLElvfHq8",
-        "outputId": "2f035c75-749c-400c-fde7-18e6d9dd19a0"
+        "outputId": "99bef84c-951e-474c-e912-1bc45dd2c77e"
       },
       "source": [
         "d.display(hourdf)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2005,7 +2005,7 @@
       "source": [
         "hourdf_analyse=pd.DataFrame({\"Minimum at\":hourdf.idxmin(),\"Maximum at\":hourdf.idxmax()})"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -2016,12 +2016,12 @@
           "height": 203
         },
         "id": "pcSMcYg3fo9-",
-        "outputId": "b43f923e-0df6-422c-fdc9-0ef5614ee167"
+        "outputId": "9506ee83-6a19-43da-8858-d7751c534d02"
       },
       "source": [
         "d.display(hourdf_analyse)"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2142,12 +2142,12 @@
           "height": 417
         },
         "id": "cTKG60SdgJOh",
-        "outputId": "da87590c-d5f6-4416-d82b-abbcd8b271be"
+        "outputId": "2c83c649-2b28-4637-d57f-044352a8a564"
       },
       "source": [
         "d.display(df)"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2357,7 +2357,7 @@
         "   \"Packet Loss\":\"mean\"\n",
         "}).round(2)"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -2368,12 +2368,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 447
         },
-        "outputId": "f89e6b1c-fbbc-4d9a-94b1-e8fb238b8931"
+        "outputId": "a39c3eb8-9e15-4712-ee6b-74e9a4b6ed93"
       },
       "source": [
         "d.display(analysed)"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2543,7 +2543,7 @@
       "source": [
         "analysed.to_csv('analytics.csv', index=True)"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -2559,7 +2559,7 @@
         "  \"Upload\":[\"min\",\"idxmin\",\"max\",\"idxmax\"],\n",
         " \"Packet Loss\":[\"min\",\"idxmin\",\"max\",\"idxmax\"]})"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -2570,12 +2570,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 444
         },
-        "outputId": "d2501f96-8fda-40aa-bad4-6722974874a0"
+        "outputId": "0dc25f2f-b8dd-4d65-9c49-fc60aad8428e"
       },
       "source": [
         "d.display(overall_df)"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2867,7 +2867,7 @@
         "  #print(overall_df2[(col,\"idxmin\")])\n",
         "  #print(analysedf2.loc[[x for x in overall_df2[col][\"idxmin\"]]].index.get_level_values(1))"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -2881,7 +2881,7 @@
         "    \"idxmax\":\"Hour (Max)\"\n",
         "})"
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -2892,12 +2892,12 @@
           "height": 343
         },
         "id": "5K5DLo69g2IC",
-        "outputId": "70638169-0c27-45be-d7d4-337a10819df6"
+        "outputId": "37fb3e11-96b4-4b12-de71-d25b1b396f8c"
       },
       "source": [
         "d.display(overall_df)"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3173,7 +3173,7 @@
       "source": [
         "final_df=overall_df.drop(['min', 'max'],level=1, axis=1)"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -3184,12 +3184,12 @@
           "height": 326
         },
         "id": "0_-QZ8yrjIbE",
-        "outputId": "5ce11cf5-cc05-4168-bfa9-4e102e73fcca"
+        "outputId": "68eeec03-986b-497b-d6ac-b73b0ba956b4"
       },
       "source": [
         "d.display(final_df)"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3395,14 +3395,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6dfeb0bf-a75f-4145-a11b-92bdadc16794"
+        "outputId": "3bf4e095-7dd6-4398-c792-6368bcad22f1"
       },
       "source": [
         "Min_Latency_Day=overall_df[\"Latency\",\"min\"].idxmin()\n",
         "Corresponding_hour=overall_df.loc[overall_df[\"Latency\",\"min\"].idxmin()][\"Latency\"][\"Hour (Min)\"]\n",
-        "print(\"Best day and hour for low latency activities: \",Min_Latency_Day,\"and\",Corresponding_hour,\"IST.\")"
+        "print(\"Best day and hour for low latency activities: \"\\\n",
+        "      ,Min_Latency_Day,\"and\",Corresponding_hour,\"IST.\")"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
