--- a/Internet_Analysis.ipynb
+++ b/Internet_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Internet Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNpFFE8RwPmzFDN6B2EC9kQ",
+      "authorship_tag": "ABX9TyPzWIYPDKuxUt8Sx+aPe+7z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,6 +59,17 @@
           "execution_count": 1
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZvTEzoMaamWg"
+      },
+      "source": [
+        "# pylint: disable=invalid-name, wrong-import-position, import-error"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
