Removed list comprehensions and saved results

--- a/Internet_Analysis.ipynb
+++ b/Internet_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Internet Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPzWIYPDKuxUt8Sx+aPe+7z",
+      "authorship_tag": "ABX9TyMzoN/EkK1ghrs5b/0YAVkv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -608,8 +608,10 @@
         "day_outages={}\n",
         "hour_outages={}\n",
         "days=[\"Sun\",\"Mon\",\"Tue\",\"Wed\",\"Thu\",\"Fri\",\"Sat\"]\n",
-        "hours=[i for i in range(24)]\n",
-        "columns=[x for x in outagedf]\n",
+        "hours=list(range(24))\n",
+        "columns=[]\n",
+        "for x in outagedf:\n",
+        "  columns.append(x)\n",
         "columns.remove(\"Server\")\n",
         "servers={}\n",
         "\n",
@@ -2871,9 +2873,9 @@
       "source": [
         "columns=[\"Latency\",\"Jitter\",\"Download\",\"Upload\",\"Packet Loss\"]\n",
         "for col in columns:\n",
-        "    overall_df[(col,\"idxmin\")]=analysed.loc[[x for x in overall_df[col][\"idxmin\"]]]\\\n",
+        "    overall_df[(col,\"idxmin\")]=analysed.loc[overall_df[col][\"idxmin\"]]\\\n",
         "    .index.get_level_values(1)\n",
-        "    overall_df[(col,\"idxmax\")]=analysed.loc[[x for x in overall_df[col][\"idxmax\"]]]\\\n",
+        "    overall_df[(col,\"idxmax\")]=analysed.loc[overall_df[col][\"idxmax\"]]\\\n",
         "    .index.get_level_values(1)\n",
         "  #print(overall_df2[(col,\"idxmin\")])\n",
         "  #print(analysedf2.loc[[x for x in overall_df2[col][\"idxmin\"]]].index.get_level_values(1))"
