Fixed indentation and added pylint generated members statement

--- a/Internet_Analysis.ipynb
+++ b/Internet_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Internet Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMzoN/EkK1ghrs5b/0YAVkv",
+      "authorship_tag": "ABX9TyOoqzYafD40GhvXh5DN4412",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,8 @@
         "id": "ZvTEzoMaamWg"
       },
       "source": [
-        "# pylint: disable=invalid-name, wrong-import-position, import-error"
+        "# pylint: disable=invalid-name, wrong-import-position, import-error\n",
+        "# pylint: generated-members=pandas.*"
       ],
       "execution_count": null,
       "outputs": []
@@ -611,7 +612,7 @@
         "hours=list(range(24))\n",
         "columns=[]\n",
         "for x in outagedf:\n",
-        "  columns.append(x)\n",
+        "    columns.append(x)\n",
         "columns.remove(\"Server\")\n",
         "servers={}\n",
         "\n",
