Disabling no member error

--- a/Internet_Analysis.ipynb
+++ b/Internet_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Internet Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOoqzYafD40GhvXh5DN4412",
+      "authorship_tag": "ABX9TyO7O0gjNeLk6fcu0Sv9UO6s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,8 +66,7 @@
         "id": "ZvTEzoMaamWg"
       },
       "source": [
-        "# pylint: disable=invalid-name, wrong-import-position, import-error\n",
-        "# pylint: generated-members=pandas.*"
+        "# pylint: disable=invalid-name, wrong-import-position, import-error, no-member"
       ],
       "execution_count": null,
       "outputs": []
