Removed Description and wrong-import-position pylint disable statement

--- a/Internet_Analysis.ipynb
+++ b/Internet_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Internet Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO7O0gjNeLk6fcu0Sv9UO6s",
+      "authorship_tag": "ABX9TyOZSabSMWIvqzsD3SGe0SAz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,39 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Priya378/Internet-Analysis-Project/blob/master/Internet_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qaYWmg09GGfa",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "6ef38a96-a3ce-4907-84bb-912ea8cf423f"
-      },
-      "source": [
-        "\"\"\"Internet Analysis\"\"\""
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'Internet Analysis'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 1
-        }
+        "<a href=\"https://colab.research.google.com/github/Priya378/Internet-Analysis-Project/blob/main/Internet_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -66,7 +34,7 @@
         "id": "ZvTEzoMaamWg"
       },
       "source": [
-        "# pylint: disable=invalid-name, wrong-import-position, import-error, no-member"
+        "# pylint: disable=invalid-name, import-error, no-member"
       ],
       "execution_count": null,
       "outputs": []
