Disabled no-member error for set_index line, disabled wrong import position error.

--- a/Internet_Analysis.ipynb
+++ b/Internet_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Internet Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOZSabSMWIvqzsD3SGe0SAz",
+      "authorship_tag": "ABX9TyPBpJJajzixlhorAlqq9fMB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "id": "ZvTEzoMaamWg"
       },
       "source": [
-        "# pylint: disable=invalid-name, import-error, no-member"
+        "# pylint: disable=invalid-name, missing-module-docstring, wrong-import-position, import-error"
       ],
       "execution_count": null,
       "outputs": []
@@ -378,7 +378,7 @@
         "outputId": "b8ba5b69-c2c5-4cdf-998a-9b0a57ca9085"
       },
       "source": [
-        "outagedf=datadf.set_index(\"Time\",inplace=False)\n",
+        "outagedf=datadf.set_index(\"Time\",inplace=False) # pylint: disable=no-member\n",
         "d.display(outagedf)"
       ],
       "execution_count": null,
