Load data.csv from Github

--- a/Internet_Analysis.ipynb
+++ b/Internet_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Internet Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPBpJJajzixlhorAlqq9fMB",
+      "authorship_tag": "ABX9TyOA00ovHX91aH/07PYN8Q3L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c46f72c3-97bb-4ff4-9a43-60e04b2ecdd7"
+        "outputId": "7e10c20a-5988-459a-fc3f-77a5923f7d34"
       },
       "source": [
         "!pip install pandas\n",
@@ -69,27 +69,27 @@
           "text": [
             "Requirement already satisfied: pandas in /usr/local/lib/python3.7/dist-packages (1.1.5)\n",
             "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas) (2018.9)\n",
-            "Requirement already satisfied: numpy>=1.15.4 in /usr/local/lib/python3.7/dist-packages (from pandas) (1.19.5)\n",
             "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas) (2.8.1)\n",
+            "Requirement already satisfied: numpy>=1.15.4 in /usr/local/lib/python3.7/dist-packages (from pandas) (1.19.5)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (3.2.2)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (0.10.0)\n",
             "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.4.7)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.3.1)\n",
             "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (2.8.1)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (0.10.0)\n",
             "Requirement already satisfied: numpy>=1.11 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.19.5)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib) (1.3.1)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from cycler>=0.10->matplotlib) (1.15.0)\n",
             "Requirement already satisfied: IPython in /usr/local/lib/python3.7/dist-packages (5.5.0)\n",
-            "Requirement already satisfied: decorator in /usr/local/lib/python3.7/dist-packages (from IPython) (4.4.2)\n",
-            "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.7/dist-packages (from IPython) (5.0.5)\n",
-            "Requirement already satisfied: pexpect in /usr/local/lib/python3.7/dist-packages (from IPython) (4.8.0)\n",
-            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.7/dist-packages (from IPython) (57.2.0)\n",
-            "Requirement already satisfied: pygments in /usr/local/lib/python3.7/dist-packages (from IPython) (2.6.1)\n",
             "Requirement already satisfied: pickleshare in /usr/local/lib/python3.7/dist-packages (from IPython) (0.7.5)\n",
-            "Requirement already satisfied: simplegeneric>0.8 in /usr/local/lib/python3.7/dist-packages (from IPython) (0.8.1)\n",
+            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.7/dist-packages (from IPython) (57.2.0)\n",
+            "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.7/dist-packages (from IPython) (5.0.5)\n",
+            "Requirement already satisfied: decorator in /usr/local/lib/python3.7/dist-packages (from IPython) (4.4.2)\n",
             "Requirement already satisfied: prompt-toolkit<2.0.0,>=1.0.4 in /usr/local/lib/python3.7/dist-packages (from IPython) (1.0.18)\n",
-            "Requirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->IPython) (1.15.0)\n",
+            "Requirement already satisfied: pygments in /usr/local/lib/python3.7/dist-packages (from IPython) (2.6.1)\n",
+            "Requirement already satisfied: simplegeneric>0.8 in /usr/local/lib/python3.7/dist-packages (from IPython) (0.8.1)\n",
+            "Requirement already satisfied: pexpect in /usr/local/lib/python3.7/dist-packages (from IPython) (4.8.0)\n",
             "Requirement already satisfied: wcwidth in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->IPython) (0.2.5)\n",
+            "Requirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.7/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->IPython) (1.15.0)\n",
             "Requirement already satisfied: ipython-genutils in /usr/local/lib/python3.7/dist-packages (from traitlets>=4.2->IPython) (0.2.0)\n",
             "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.7/dist-packages (from pexpect->IPython) (0.7.0)\n"
           ],
@@ -105,17 +105,7 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "eBNBNVOI8JB1"
-      },
-      "source": [
+        "import matplotlib.pyplot as plt\n",
         "import IPython.display as d"
       ],
       "execution_count": null,
@@ -129,10 +119,10 @@
           "height": 417
         },
         "id": "kA30xmOUNK77",
-        "outputId": "bb5acead-4c7c-4f5b-c697-201df21ad3a7"
+        "outputId": "af181112-36c4-4abf-fdce-1dbbdaf6c79c"
       },
       "source": [
-        "datadf = pd.read_csv(\"data.csv\")\n",
+        "datadf=pd.read_csv('https://raw.githubusercontent.com/Priya378/Internet-Analysis-Project/main/data.csv')\n",
         "datadf.rename(columns={\"Unnamed: 0\":\"Time\"},inplace=True)\n",
         "d.display(datadf)"
       ],
@@ -375,7 +365,7 @@
           "height": 447
         },
         "id": "-FOqwqHGWoEZ",
-        "outputId": "b8ba5b69-c2c5-4cdf-998a-9b0a57ca9085"
+        "outputId": "fb4738ab-e7cf-439a-d194-0126427a01b1"
       },
       "source": [
         "outagedf=datadf.set_index(\"Time\",inplace=False) # pylint: disable=no-member\n",
@@ -611,7 +601,7 @@
           "height": 805
         },
         "id": "XLz8X0OLadTG",
-        "outputId": "f3baaf18-a1e9-4ded-93b7-489df9f12e80"
+        "outputId": "f37eb701-c2f8-4189-f96a-746ddc6090ad"
       },
       "source": [
         "hour_outagedf=pd.DataFrame({\"Count\":hour_outages}).sort_values([\"Count\"],ascending=0)\n",
@@ -795,7 +785,7 @@
           "height": 346
         },
         "id": "LB_7lVN3arOs",
-        "outputId": "9896e9b7-a72c-4855-bbbb-52e558b265a9"
+        "outputId": "22283b27-dc52-4b19-8252-643137b9884f"
       },
       "source": [
         "keys=hour_outages.keys()\n",
@@ -842,7 +832,7 @@
           "height": 282
         },
         "id": "z8Il_zKrbHWN",
-        "outputId": "06d29952-b789-4b84-84c6-8e12378920c4"
+        "outputId": "01b20b01-9976-41f9-d75b-6f71da036341"
       },
       "source": [
         "day_outagedf=pd.DataFrame({\"Count of Days\":day_outages}).sort_values([\"Count of Days\"],ascending=0)\n",
@@ -941,7 +931,7 @@
           "height": 364
         },
         "id": "-iN-0_JAbPgs",
-        "outputId": "cd7ef8fb-cbaa-477f-880d-c32879a3a8d6"
+        "outputId": "2b1dd4dc-53b7-42eb-d582-ad22f5464a42"
       },
       "source": [
         "keys=day_outages.keys()\n",
@@ -988,7 +978,7 @@
           "height": 743
         },
         "id": "99QuTW4AbsMw",
-        "outputId": "72636d2b-5264-4b01-b815-2871d8b3b343"
+        "outputId": "24dc0816-22f9-48ee-d2a8-df1f4b98f66a"
       },
       "source": [
         "connections=pd.DataFrame({\"Connections\":servers})\n",
@@ -1181,7 +1171,7 @@
           "height": 417
         },
         "id": "rgldax80dig4",
-        "outputId": "808281b3-a39e-4fc7-8328-c0190e68652a"
+        "outputId": "8b4f65ae-9d4c-4422-ff84-15411fa1799e"
       },
       "source": [
         "df=datadf.copy()\n",
@@ -1418,7 +1408,7 @@
           "height": 295
         },
         "id": "6o6w89f9ea1e",
-        "outputId": "982d5079-29ce-4d29-c26c-6e4ee3b5f529"
+        "outputId": "b7e68e09-1e53-424d-919a-eb3e2cae7905"
       },
       "source": [
         "d.display(daydf)"
@@ -1560,7 +1550,7 @@
           "height": 203
         },
         "id": "U52SDFSxepx1",
-        "outputId": "c84ae4c3-c093-40f1-99c3-45a1943fe095"
+        "outputId": "51f9f5b4-708c-48b0-a7da-f4d84b29dbe5"
       },
       "source": [
         "d.display(daydf_analyse)"
@@ -1702,7 +1692,7 @@
           "height": 819
         },
         "id": "oDltLElvfHq8",
-        "outputId": "4d341ba0-a6ce-4847-9b6a-6388e07e925a"
+        "outputId": "dd556331-12cc-4e8e-92b2-84df5a1b9760"
       },
       "source": [
         "d.display(hourdf)"
@@ -1997,7 +1987,7 @@
           "height": 203
         },
         "id": "pcSMcYg3fo9-",
-        "outputId": "111cdb5e-7841-4c21-ba79-469ee05e8b18"
+        "outputId": "885fdf68-a789-4fe2-cd12-a9a4a75f46da"
       },
       "source": [
         "d.display(hourdf_analyse)"
@@ -2123,7 +2113,7 @@
           "height": 417
         },
         "id": "cTKG60SdgJOh",
-        "outputId": "1cac9e98-9e11-4d0a-d963-840a87f486f2"
+        "outputId": "699e45d6-7e50-4cc6-8882-ad4a5c66dd89"
       },
       "source": [
         "d.display(df)"
@@ -2349,7 +2339,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 447
         },
-        "outputId": "3f2ec067-292d-4459-f028-5e7a1b5087f9"
+        "outputId": "758807fa-4ac8-47e6-8e6e-4ef96c75bbff"
       },
       "source": [
         "d.display(analysed)"
@@ -2551,7 +2541,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 444
         },
-        "outputId": "ec6d308f-fabc-4820-d576-862c27f025b7"
+        "outputId": "61f62e10-b787-4c43-dfa3-e8c8030068d3"
       },
       "source": [
         "d.display(overall_df)"
@@ -2873,7 +2863,7 @@
           "height": 343
         },
         "id": "5K5DLo69g2IC",
-        "outputId": "812ea521-9b47-477a-b6ab-bbf824f0e9a3"
+        "outputId": "5b009437-e690-48b9-e607-ee8afe15c693"
       },
       "source": [
         "d.display(overall_df)"
@@ -3165,7 +3155,7 @@
           "height": 326
         },
         "id": "0_-QZ8yrjIbE",
-        "outputId": "912152b4-fd85-4082-8f8b-ee1cdf79f4e3"
+        "outputId": "ab0bf31e-b655-42d2-e030-bece300f7739"
       },
       "source": [
         "d.display(final_df)"
@@ -3376,7 +3366,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "32e6981d-2ec5-427c-c217-ba778c9f8073"
+        "outputId": "6482259b-9cfc-45bd-8057-4ccf47a43104"
       },
       "source": [
         "Min_Latency_Day=overall_df[\"Latency\",\"min\"].idxmin()\n",
